# kobuleti

./: .gitignore  Cargo.toml  README.md  justfile  replace_ansi_whitespace.py  rustfmt.toml
ascension-macro/: Cargo.toml
ascension-macro/src/: lib.rs
src/: client.rs  details.rs  game.rs  input.rs  main.rs  protocol.rs  server.rs  shared.rs  ui.rs
src/assets/: ServerIntro.txt  card_template.txt  intro  monster.txt  monster1.txt  monster2.txt  monster3.txt  onelegevil.txt  server_intro  title  waiting_screen.txt
src/assets/abilities/: Eight_Clubs.txt  Seven_Clubs.txt  Six_Clubs.txt
src/assets/monsters/: Eight_Diamonds.txt  King_Clubs.txt  Nine_Spades.txt  Queen_Diamonds.txt  Queen_Hearts.txt  Seven_Clubs.txt  Six_Spades.txt  Ten_Clubs.txt  Ten_Hearts.txt  Ten_Spades.txt  Three_Clubs.txt  Three_Diamonds.txt  Three_Hearts.txt  Three_Spades.txt  Two_Clubs.txt  Two_Diamonds.txt  Two_Hearts.txt  Two_Spades.txt  dragonknive.txt  kingpiki.txt  molotgoat.txt
src/assets/roles/mage/: description.txt
src/assets/roles/paladin/: description.txt
src/assets/roles/rogue/: description.txt
src/assets/roles/warrior/: description.txt
src/client/: input.rs  states.rs  ui.rs
src/client/ui/: details.rs  game.rs  home.rs  roles.rs
src/protocol/: client.rs  details.rs  server.rs
src/server/: commands.rs  details.rs  peer.rs  peer2.rs  room.rs  session.rs  states.rs
src/ui/: details.rs  game.rs  home.rs  roles.rs  select_role.rs
