[package]
name = "ascension"
description = '''The online RPG game for two players, based on playing cards
invented by Antony Ngo 
.https://www.youtube.com/watch?v=NwLkOBRf1iM&ab_channel=AnthonyNgo'''
authors = ["Xenia Melnikova", "Igor Galkin galigorrom@gmail.com"]
categories = ["command-line-utilities", "command-line-interface", "game-development", "games", "network-programming"]
keywords = ["game", "tui", "multiplayer", "rpg"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/autogalkin/ascension"
license = "MIT"

[[bin]]
name = "ascension"

[dependencies]
clap = { version = "*", features = ["cargo"] }
crossterm = { version = "*", features = ["event-stream"] }
ratatui = { version = "*", default-features = false, features = ["crossterm"] }
tui-input = "*"
rand = "*"
anyhow = "*"
const_format = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
tokio-stream = "*"
bytes = "*"
reqwest = { version = "*" }
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
futures = { version = "*", features = ["thread-pool"]}
tracing = "*"
tracing-subscriber = {version="*", features=["env-filter"]}
tracing-appender = "*"
thiserror = "*"
enum_dispatch = "0.3.12"
ansi-to-tui = "3.1.0"
structstruck = "0.4.1"
take_mut = "0.2.2"
lazy_static = "1.4.0"
textwrap = "0.16.0"
async-trait = "0.1.71"
paste = "1.0.14"
arrayvec = "0.7.4"

