[package]
name = "ascension"
description = '''The online RPG game for two players, based on playing cards
invented by Antony Ngo 
.https://www.youtube.com/watch?v=NwLkOBRf1iM&ab_channel=AnthonyNgo'''
authors = ["Xenia Melnikova", "Igor Galkin galigorrom@gmail.com"]
categories = ["command-line-utilities", "command-line-interface", "game-development", "games", "network-programming"]
keywords = ["game", "tui", "multiplayer", "rpg"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/autogalkin/ascension"
license = "MIT"

[[bin]]
name = "ascension"

[dependencies]
tracing-test = "0.1"
ansi-to-tui = "3.1.0"
take_mut = "0.2.2"
lazy_static = "1.4.0"
async-trait = "0.1.71"
paste = "1.0.14"
arrayvec = "0.7.4"
scopeguard = "1.2.0"
tracing = "0.1.37"
serde_json = "1.0.104"
anyhow = "1.0.74"
rand = "0.8.5"
const_format = "0.2.31"
tracing-appender = "0.2.2"
tokio = { version = "1.31.0", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
tui-input = "0.8.0"
tracing-subscriber = { version= "0.3.17" , features = ["env-filter"]}
tokio-util = { version = "0.7.8", features = ["full"] }
ratatui = { version = "0.22.0", features = ["crossterm"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
clap = { version = "4.3.21", features = ["cargo"] }
futures = "0.3.28"
derive_more = { version = "1.0.0-beta.3", features = ["debug","try_unwrap", "from", "into", "try_into", "display", "deref", "deref_mut"], git = "https://github.com/JelteF/derive_more.git"}
thiserror = "1.0.46"
async-recursion = "1.0.4"

